--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get_it: ^7.2.0
   intl: ^0.17.0
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
