--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: contacts
-description: A new Flutter project.
+description: ADEV Ventures Technical Assessment
 
 publish_to: 'none'
 
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.17.0
   url_launcher: ^6.1.6
   shared_preferences: ^2.0.15
+  flame: ^1.4.0
 
 dev_dependencies:
   flutter_test:
@@ -49,23 +50,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
